--- a/src/app/components/diagnostic/diagnostic.component.css
+++ b/src/app/components/diagnostic/diagnostic.component.css
@@ -166,3 +166,45 @@ footer{
     justify-content: flex-end;
     margin: 25px 130px;
 }
+
+@media only screen and (max-width: 800px) {
+    .form-search-dni{
+        display: flex;
+        width: 20%;
+        margin: 15px 5%;
+        padding-left: 9rem;
+        justify-content:space-evenly;
+        align-items: center;
+    }
+
+    
+.diagnostic-symptom{
+    display: flex;
+    flex-direction: column;
+    flex: none;
+    margin: 40px;
+    justify-content: center;
+}
+
+.diagnostic{
+    
+    width: 80%;
+    padding: 20px;
+    margin-bottom: 100px;
+    align-items: center;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.symptom {
+    width: 80%;
+    padding: 20px;
+    margin-bottom: 100px;
+    align-items: center;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+}
