--- a/src/app/components/referred/referred.component.html
+++ b/src/app/components/referred/referred.component.html
@@ -39,7 +39,7 @@
         
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4">No data available</td>
             </tr>
         </table>
     </div>
