--- a/src/app/components/dialog-exam/dialog-exam.component.html
+++ b/src/app/components/dialog-exam/dialog-exam.component.html
@@ -1,8 +1,8 @@
 <div class="body">
     <p mat-dialog-title>Añada tipo de examen</p>
-    <textarea class="input-text" rows="5" md-select-on-focus placeholder="Examen"></textarea>
+    <textarea matInput [(ngModel)]="exam" class="input-text" rows="5" md-select-on-focus placeholder="Examen"></textarea>
     <mat-dialog-actions class="area-button">
         <button mat-button mat-dialog-close class="button button-close button-primary"> Cancelar</button>
-        <button mat-button mat-dialog-close class="button button-confirm"> Confirmar</button>
+        <button mat-button mat-dialog-close [mat-dialog-close]="exam" class="button button-confirm"> Confirmar</button>
     </mat-dialog-actions>
 </div>
