--- a/src/app/components/incidence-admin/incidence-admin.component.css
+++ b/src/app/components/incidence-admin/incidence-admin.component.css
@@ -31,7 +31,6 @@ table {
 .mat-form-field {
   font-size: 14px;
   width: 100%;
-  border-bottom: 1px solid black;
   margin-bottom: 2vh;
 }
 
@@ -55,5 +54,9 @@ table {
 
 tr.mat-header-row {
   background-color: #2C3E50;
+  color: white;
+}
+
+th.mat-header-cell {
   color: white;
 }
