--- a/src/app/components/incidence-admin/incidence-admin.component.html
+++ b/src/app/components/incidence-admin/incidence-admin.component.html
@@ -18,13 +18,13 @@
             <!-- Name Column -->
             <ng-container matColumnDef="docMedic">
                 <th mat-header-cell *matHeaderCellDef> Doc. Médico </th>
-                <td mat-cell *matCellDef="let element"> {{element.docMedic}} </td>
+                <td mat-cell *matCellDef="let element"> {{docMedic}}</td>
             </ng-container>
         
             <!-- Weight Column -->
             <ng-container matColumnDef="type">
                 <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.incidenceType}} </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
