--- a/src/app/components/incidence-create/incidence-create.component.html
+++ b/src/app/components/incidence-create/incidence-create.component.html
@@ -4,15 +4,15 @@
         <div class="elements-row">
             <div class="element-container">
                 <label class="label-content">Doc Medico</label>
-                <input type="text" class="input" [(ngModel)]="docMedic" disabled>
+                <input type="text" class="input" [(ngModel)]="userId" formControlName="userId">
             </div>
             <div class="element-container">
                 <label class="label-content">Centro Salud Id</label>
-                <input type="number" class="input" [(ngModel)]="establishmentId" formControlName="saludid">
+                <input type="number" class="input" [(ngModel)]="establishmentId" formControlName="establishmentId">
             </div>
             <div class="element-container">
                 <label class="label-content">Estado</label>
-                <select class="combo" class="input" [(ngModel)]="status">
+                <select class="combo" class="input" [(ngModel)]="status" formControlName="status">
                     <option value="Select">Buscar elemento</option>
                     <option value="Nuevo">Nuevo</option>
                     <option value="PENDIENTE">PENDIENTE</option>
@@ -22,18 +22,18 @@
         <div class="elements-row">
             <div class="element-container">
                 <label class="label-content">Teléfono</label>
-                <input class="telefono" class="input" [(ngModel)]="phone" formControlName="telefono">
+                <input class="telefono" class="input" [(ngModel)]="phone" formControlName="phone">
             </div>
             <div class="element-container">
                 <label class="label-content">Tipo de Registro</label>
-                <select class="combo" class="input" [(ngModel)]="registerType">
+                <select class="combo" class="input" [(ngModel)]="incidenceType" formControlName="incidenceType"> 
                     <option value="Select">Buscar Elemento</option>
                     <option value="Requerimiento">Requerimiento</option>
                 </select>
             </div>
             <div class="element-container">
                 <label class="label-content">Prioridad</label>
-                <select class="combo" class="input" [(ngModel)]="priority">
+                <select class="combo" class="input" [(ngModel)]="priority" formControlName="priority">
                     <option value="Select">Buscar Elemento</option>
                     <option value="Alta">Alta</option>
                     <option value="Media">Media</option>
@@ -42,7 +42,7 @@
         </div>
         <div class="asunto-container">
             <label class="label-content-asunto">Asunto: </label>
-            <input class="asunto" [(ngModel)]="topic" formControlName="asunto">
+            <input class="asunto" [(ngModel)]="topic" formControlName="topic">
         </div>
         <div class="desc-input-sec">
             <label class="label-content">Descripción de Incidencia</label>
