--- a/src/app/components/incidence-details/incidence-details.component.html
+++ b/src/app/components/incidence-details/incidence-details.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="element-container">
                 <label>Centro de Salud</label>
-                <input disabled [value]="centroSaludId">
+                <input disabled [value]="establishmentId">
             </div>
             <div class="element-container">
                 <label>Estado</label>
@@ -28,7 +28,7 @@
         <div>
             <label>Descripción de Incidencia</label>
             <div class="container-desc-incidence">
-                <p aria-disabled="true">{{description}}</p>
+                <p aria-disabled="true" >{{description}}</p>
             </div>
         </div>
         <div class="elements-row-center">
@@ -57,8 +57,8 @@
                     Fecha de Solución
                 </label>
                 <div class="element-container-section-samall">
-                    <input type="date" [(ngModel)]="inputDate">
-                    <input type="time" [(ngModel)]="inputHour">
+                    <input type="date" #myDate [value]="inputDate | date:'yyyy-MM-dd'" (ngModel)="inputDate"/>
+                    <input type="time" (ngModel)="inputHour" [value]="inputHour">
                 </div>
             </div>
         </div>
