--- a/src/app/components/patients/patients.component.html
+++ b/src/app/components/patients/patients.component.html
@@ -1,37 +1,38 @@
 <div class="contenedor">
 
-<form class="row g-3" (ngSubmit)="onSearch()">
-    <div class="col-auto">
-        <input type="text" class="form-control" name="document" placeholder="Buscar por DNI..." maxlength="8"
-            [(ngModel)]="document" />
-    </div>
-    <div class="col-auto">
-        <button type="submit" class="btn btn-primary">Buscar</button>
-    </div>
-</form>
-<table class="table table-striped mh-100 overflow-auto">
-    <thead>
-        <tr>
-            <th scope="col">Nombres</th>
-            <th scope="col">Apellidos</th>
-            <th scope="col">N° de Documento</th>
-            <th scope="col">Diagnóstico</th>
-            <th scope="col">Detalle</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let patient of patientList">
-            <td>{{ patient.firstName }}</td>
-            <td>{{ patient.lastName }}</td>
-            <td>{{ patient.documentNumber }}</td>
-            <td>
-                <button class="btn btn-small btn-primary" data-bs-toggle="modal" (click)="diagnostico()"><i
-                        class="bi bi-plus-circle"></i></button>
-            </td>
-            <td>
-                <button class="btn btn-small btn-primary" (click)="goDetail()"><i class="bi bi-file-text"></i></button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+    <form class="row g-3" (ngSubmit)="onSearch()">
+        <div class="col-auto">
+            <input type="text" class="form-control" name="document" placeholder="Buscar por DNI..." maxlength="8"
+                [(ngModel)]="document" />
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary">Buscar</button>
+        </div>
+    </form>
+    <table class="table table-striped mh-100 overflow-auto">
+        <thead>
+            <tr>
+                <th scope="col">Nombres</th>
+                <th scope="col">Apellidos</th>
+                <th scope="col">N° de Documento</th>
+                <th scope="col">Diagnóstico</th>
+                <th scope="col">Detalle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let patient of patientList">
+                <td>{{ patient.firstName }}</td>
+                <td>{{ patient.lastName }}</td>
+                <td>{{ patient.documentNumber }}</td>
+                <td>
+                    <button class="btn btn-small btn-primary" data-bs-toggle="modal"
+                        (click)="diagnostico(patient.id)"><i class="bi bi-plus-circle"></i></button>
+                </td>
+                <td>
+                    <button class="btn btn-small btn-primary" (click)="goDetail()"><i
+                            class="bi bi-file-text"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
