--- a/src/app/components/patients/patients.component.html
+++ b/src/app/components/patients/patients.component.html
@@ -29,7 +29,7 @@
                         (click)="diagnostico(patient.id)"><i class="bi bi-plus-circle"></i></button>
                 </td>
                 <td>
-                    <button class="btn btn-small btn-primary" (click)="goDetail()"><i
+                    <button class="btn btn-small btn-primary" (click)="goDetail(patient.id)"><i
                             class="bi bi-file-text"></i></button>
                 </td>
             </tr>
