--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -77,7 +77,7 @@
           <div *ngIf="isShownAnamnesis" class="anamnesis-fisico">
             <h4 class="title-section">Anamnesis</h4>
             Resumen Anamnesis
-            <textarea rows="4">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
+            <textarea rows="4" id="anamnesisResume">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
             Examen Físico:
             <div class="anamnesis-form" errorTailor>
               <div class="line">
@@ -113,7 +113,7 @@
             </div>
             Resumen Examen Físico
 
-            <textarea rows="2">Hinchazón de las piernas</textarea>
+            <textarea rows="2" id="examResume">Hinchazón de las piernas</textarea>
           </div>
           <div *ngIf="isShownDiagnostic" class="diagnostic-help">
             <div class="t-container">
