--- a/src/app/components/referred/referred.component.html
+++ b/src/app/components/referred/referred.component.html
@@ -11,7 +11,7 @@
             <!-- Position Column -->
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef> Número de Referencia </th>
-                <td mat-cell *matCellDef="let element"> {{element.idReference}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
         
             <!-- Name Column -->
