--- a/src/app/components/incidence-admin/incidence-admin.component.css
+++ b/src/app/components/incidence-admin/incidence-admin.component.css
@@ -19,13 +19,19 @@ body{
 }
 
 .table-content{
-  background-color: bisque;
+  background-color: rgb(255, 255, 255);
   width: 70%;
 }
 
 table {
   width: 100%;
   background-color: #ECF4FC;
+}
+
+.mat-paginator {
+  margin-bottom: 50px;
+  border: solid rgb(240, 240, 240) 1px;
+  box-shadow: 0px 0px 15px #d1d1d1 ;
 }
 
 .mat-form-field {
