--- a/src/app/components/incidence-admin/incidence-admin.component.html
+++ b/src/app/components/incidence-admin/incidence-admin.component.html
@@ -48,6 +48,11 @@
             <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
             </tr>
         </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+            showFirstLastButtons 
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
     </div>
     <div class="container-newIndicence">
         <button type="submit" class="btn-incidence" (click)="createIncidence()">Crear Nuevo</button>
