--- a/src/app/components/referrals/referrals.component.css
+++ b/src/app/components/referrals/referrals.component.css
@@ -99,8 +99,7 @@ body {
     height:80vh;
 }
 .container-buttons{
-    margin-right: 10vh;
-    margin-left: 120vh;
+
 }
 .main-container{
     margin-top: 5vh;
@@ -140,7 +139,8 @@ label{
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5);
+    margin-top: 35px;
 }
 
 .column-2{
@@ -337,11 +337,6 @@ input[type=date]{
         justify-content: center;
         align-items: center;
     }
-
-    .container-buttons{
-        margin-right: auto;
-        margin-left: auto;
-    }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -352,9 +347,5 @@ input[type=date]{
         display: flex;
         justify-content: center;
         align-items: center;
-    }
-    .container-buttons{
-        margin-right: 10vw;
-        margin-left: 60vw;
     }
 }
