--- a/src/app/components/referred/referred.component.css
+++ b/src/app/components/referred/referred.component.css
@@ -32,7 +32,12 @@ body{
 table {
   width: 100%;
   background-color: #ECF4FC;
+}
+
+.mat-paginator {
   margin-bottom: 50px;
+  border: solid rgb(240, 240, 240) 1px;
+  box-shadow: 0px 0px 15px #d1d1d1 ;
 }
 
 .mat-form-field {
