--- a/src/app/components/referred/referred.component.html
+++ b/src/app/components/referred/referred.component.html
@@ -42,5 +42,10 @@
             <td class="mat-cell" colspan="4">No data available</td>
             </tr>
         </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+            showFirstLastButtons 
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
     </div>
 </body>
