--- a/src/app/components/referred/referred.component.html
+++ b/src/app/components/referred/referred.component.html
@@ -1,10 +1,10 @@
 <body>
-        <section class="left-elements">
-            <mat-form-field class="layouts" appearance="standard">
-                <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
-            </mat-form-field>
-            <i class="bi bi-search"></i>
-        </section>
+    <section class="left-elements">
+        <mat-form-field class="layouts" appearance="standard">
+            <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
+        </mat-form-field>
+        <i class="bi bi-search"></i>
+    </section>
     <div class="table-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -13,38 +13,37 @@
                 <th mat-header-cell *matHeaderCellDef> Número de Referencia </th>
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
-        
+
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Paciente </th>
                 <td mat-cell *matCellDef="let element"> {{element.patient}} </td>
             </ng-container>
-        
+
             <!-- Weight Column -->
             <ng-container matColumnDef="weight">
                 <th mat-header-cell *matHeaderCellDef> DNI </th>
                 <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
             </ng-container>
-        
+
             <!-- Symbol Column -->
             <ng-container matColumnDef="symbol">
                 <th mat-header-cell *matHeaderCellDef> Detalle </th>
-                <td mat-cell *matCellDef="let element"> 
-                    <button type="button" class="btn-view" (click)="onView()">Ver</button>
+                <td mat-cell *matCellDef="let element">
+                    <button type="button" class="btn-view" (click)="onView(element.id)">Ver</button>
                 </td>
             </ng-container>
-        
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        
+
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data available</td>
+                <td class="mat-cell" colspan="4">No data available</td>
             </tr>
         </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-            showFirstLastButtons 
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
             aria-label="Select page of periodic elements">
         </mat-paginator>
     </div>
