--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
 
       </ul>
       <div class="nav-item">
-        <h2 style="color: white;">¡Bienvenido a Predimed, &nbsp; {{ name }}!</h2>
+        <h2 style="color: white;">¡Bienvenido a Predimed,&nbsp; {{ name }}!</h2>
       </div>
       <div class="nav-item">
         <h2 style="color: white;"> Centro de Salud: {{ establishmentName }}</h2>
@@ -37,7 +37,7 @@
         <li class="nav-item">
           <span class="nav-link" style="cursor: pointer;">
             <!-- <img src="assets/doctor.png" alt="doctor" width="48px" height="48px"> -->
-            <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
+            <i class="bi bi-person-circle" style="font-size: 2rem;" routerLink="/perfil" routerLinkActive="active"></i>
           </span>
         </li>
         <li class="nav-item">
